CYCO3 Changelog

Version 3.0.1
    1. 2022-02-19 Depreciated SMF striping. 
    2. 2022-02-19 Moved html documentation to separate git repository.
    3. 2022-02-21 Changes LPF to save filename when there is an error loading the file.
    4. 2022-02-21 Adds exclude, rename and bind options to section clone method.
    5. 2022-02-23 Adds shell based utilities: cwd, ls and grep.
    6. 2022.02.26 Removes monitor and action functions from generator class.
    7. 2022.02.27 Adds file head utility.
    8. 2022.03.02 Adds fractional tick argument to BAR and TBAR functions.
    9. 2022.04.01 Defines sub-instruments for MODX plugin new-maple-kit.
   10. 2022.04.04 Adds permutations function.
   11. 2022.04.12 Adds round-robin keymap.
   12. 2022.05.11 Moves modx plugin into it's own package.
   13. 2022.05.11 Replaces modx-drumkits plugin with modx-drums.

Version 3.0.2 (2022.05.11)
    1. 2022-05-13 Redefined ? inspection function to be interactive.
    2. 2022-05-13 Fixed MODX-DRUMS bug.
    3. 2022-05-18 Defines new kits for MODX-DRUMS.	
    4. 2022-05-18 Removes dead code for depreciated "simple-part"
    5. 2022-05-19 Adds render validation test at part creation time.
    6. 2022-05-20 Adds pattern/generator comprehension.
    7. 2022-05-22 Adds new XBALL part type.
    8. 2022-05-27 Adds BINCUE for 'binary cue-list'
    9. 2022-05-28 Adds BINBALL and BINXBALL macros.
   10. 2022-06-04 Moves Euclid generator to legacy-euclid plugin.
   11. 2022-06-04 Re-implements Euclid as set of functions. 
   11. 2022-06-04 Adds optional Euclidean rhythms for BINBALL and BINXBALL.
   12. 2022-06-86 Adds cuelist ducking.
   13. 2022-06-13 Extends example project ex8.