@@ -219,50 +219,3 @@ returns nested list."
 		      (push (list br bt sb) acc)))))
 	    (reverse acc))))
 
-
-    
-
-
-(let ((max-line-length 8)
-      )
-
-  (flet ((print-header (text)
-		       (if text (format t ";; ~A" text)))
-	 (print-bar (bar-number)
-		    (format t "~%;; BAR ~A~%;; " bar-number))
-
-	 )
-  
-	(defmethod pprint-cuelist ((cuelist list) &key header &allow-other-keys)
-	  (let ((current-bar (caar cuelist))
-		(line-length 0))
-	    (print-header header)
-	    (print-bar current-bar)
-	    (dolist (q cuelist)
-	      (if (not (equal (car q) current-bar))
-		  (progn
-		    (setf current-bar (car q))
-		    (setf line-length 0)
-		    (print-bar current-bar)))
-	      (if (> line-length max-line-length)
-		  (progn
-		    (format t "~%;; ")
-		    (setf line-length 0)))
-	      (format t "~A" q)
-	      (setf line-length (1+ line-length))))
-	  (format t "~%"))
-
-	(defmethod pprint-cuelist ((cuelist string) &key header (break 4) &allow-other-keys)
-	  (print-header header)
-	  (dotimes (i (length cuelist))
-	    (if (zerop (rem i break)) (format t " "))
-	    (format t "~A" (char cuelist i)))
-	  (format t "~%"))
-	    
-
-	  
-
-	
-	) ;; END FLET
-  ) ;; END LET
-  
