@@ -30,3 +30,4 @@ Version 3.0.2 (2022.05.11)
    11. 2022-06-04 Adds optional Euclidean rhythms for BINBALL and BINXBALL.
    12. 2022-06-86 Adds cuelist ducking.
    13. 2022-06-13 Extends example project ex8.
+   14. 2022-06-14 Adds logical operations on cuelist (see mask-cuelist)
